--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Kevin Candeloni",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
@@ -20,6 +21,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.10",
+    "prisma": "^4.11.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2"
   }
