--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status": "^1.6.2",
+    "joi": "^17.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
