--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "joi": "^17.9.1"
+    "joi": "^17.9.1",
+    "url-metadata": "^2.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
